--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html >
 <html lang="en">
-<head> <meta name="viewport" content="width=device-width, intial-scale=1"> <meta charset="utf-8"> <title>Lucas Karmo</title>
+<head> <meta name="viewport" content="width=device-width, intial-scale=1"> <meta charset="utf-8"> <title>Lucas P Karmo</title>
   <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
   <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
