--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 <body>
-  <! -- Header including the logo and main navigation -->
+  <!-- <! -- Header including the logo and main navigation -->
   <header class="page-header">
-    <! -- Add logo here -->
+    <!-- <! -- Add logo here -->
     <img width="100" height="100" src="img/head_shot.png" class="profile__portrait" alt="A photograph of me">
       <!-- <img src="img/head_shot.png" alt="logo" class="page-header__item" >  -->
     <nav class="main-navigation page-header__item">
