--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
   </head>
   <body>
-    <! -- Header including the logo and main navigation -->
+    <!-- <! -- Header including the logo and main navigation --> -->
     <header class="page-header">
-      <! -- Add logo here -->
+      <!-- <! -- Add logo here --> -->
       <img width="100" height="100" src="img/head_shot.png" class="profile__portrait" alt="A photograph of me">
         <!-- <img src="img/head_shot.png" alt="logo" > -->
       <nav class="main-navigation page-header__item">
@@ -32,7 +32,7 @@
     <h1>About</h1>
 
     <p>This page is about myself. This is what I enjoy doing:</p>
-    <ul class="navigation-list" class="profile">
+    <ul class="navigation-list profile">
       <li>Front-end development</li>
       <li>Back-end development</li>
       <li>Test driven development</li>
