--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
   </head>
   <body>
-    <! -- Header including the logo and main navigation -->
+    <!-- <! -- Header including the logo and main navigation -->
     <header class="page-header">
-      <! -- Add logo here -->
+      <!-- <! -- Add logo here -->
       <img width="100" height="100" src="img/head_shot.png" class="profile__portrait" alt="A photograph of me">
         <!-- <img src="img/head_shot.png" alt="logo" > -->
       <nav class="main-navigation page-header__item">
@@ -30,7 +30,7 @@
       </nav>
     </header>
     <div>
-      <form action="" method="post" id="contact-form">
+      <form method="post" id="contact-form">
         <label class="standard-label" for="contact-email">Email: </label>
         <input type="email" id="contact-email" required>
 
@@ -42,6 +42,7 @@
 
         <input type="submit" value="send message">
       </form>
+    </div>
     <div>
       Tel <a href="tel:1234567890">Call Me!</a><br>
       Skype ID <a href="skype:ltd719">ltd719</a><br>
